--- a/mandelbulber2/formula/ui/menger_pwr2_poly.ui
+++ b/mandelbulber2/formula/ui/menger_pwr2_poly.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>menger_pwr2_poly</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -650,7 +650,7 @@
           </widget>
          </item>
          <item>
-          <layout class="QGridLayout" name="gridLayout_35" columnstretch="0,0,0">
+          <layout class="QGridLayout" name="gridLayout_35" columnstretch="0,0,1">
            <property name="spacing">
             <number>2</number>
            </property>
@@ -1828,15 +1828,15 @@
  </widget>
  <customwidgets>
   <customwidget>
+   <class>MyDoubleSpinBox</class>
+   <extends>QDoubleSpinBox</extends>
+   <header>my_double_spin_box.h</header>
+  </customwidget>
+  <customwidget>
    <class>MyGroupBox</class>
    <extends>QGroupBox</extends>
    <header>my_group_box.h</header>
    <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>MyDoubleSpinBox</class>
-   <extends>QDoubleSpinBox</extends>
-   <header>my_double_spin_box.h</header>
   </customwidget>
   <customwidget>
    <class>MyCheckBox</class>
